--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "dotenv": "^4.0.0",
     "express": "~4.14.1",
     "jade": "~1.11.0",
-    "morgan": "~1.7.0"
+    "morgan": "~1.7.0",
+    "passport": "^0.4.0",
+    "passport-github2": "^0.1.10"
   },
   "devDependencies": {
     "eslint": "^4.5.0",
